# leetcode

./: pyproject.toml  renamer.py
0_1000/0_100/: 14_longest_common_prefix.py  19_remove_nth_node_from_end_of_list.py  1_two_sum.py  21_merge_two_sorted_lists.py  35_search_insert_position.py  43_multiply_strings.py  54_spiral_matrix.py  62_unique_paths.py  70_climbing_stairs.py  71_simplify_path.py  98_validate_binary_search_tree.py
0_1000/101_200/: 102_binary_tree_level_order_traversal.py  106_construct_binary_tree_from_inorder_and_postorder_traversal.py  110_balanced_binary_tree.py  121_best_time_to_buy_and_sell_stock.py  129_sum_root_to_leaf_numbers.py  142_linked_list_cycle_||.py  183_customers_who_never_order.sql  200_number_of_islands.py  226_invert_binary_tree.py
0_1000/201_300/: 202_happy_number.py  205_isomorphic_strings.py  206_reverse_linked_list.py  208_implement_trie_(prefix_tree).py  211_design_add_and_search_words_data_structure.py  234_palindrome_linked_list.py  235_lowest_common_ancestor_of_a_binary_search_tree.py  245_shortest_word_distance_iii.py  299_bulls_and_cows.py  (+1 more)
days_30_challenge/: 1_125_valid_palindrome.py  1_392_is_subsequence.py  2_344_reverse_string.py  3_977_squared_of_a_sorted_array.py  5_643_maximum_average_subarray_I.py  6_1004_max_consecutive_ones_III.py  7_904_fruit_into_baskets.py
optiver_interviews/: 1360_number_of_days_between_two_dates.py  146_lru_cache.py  5_longest_palindromic_substring.py  the_giving_tree_of_errors_v2.py  third_latest_date.py
pyspark/: 1.py  2.py  3.py  4.py  5.py  6.py
tasks/: array_inplace_replace.py
(+91 files in other folders)
